src/App.css
body {
  background-color: #F3F6FF;
}
.App {
  text-align: center;
}

.App-main {
  padding: 20px;
  padding-bottom: 50px;
}

.App-header {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-bottom: 30px;
}

.refraim-prompt {
  padding-bottom: 20px;
  text-align: left;
}

.convo-text {
  text-align: left;
  
}
.convo-text1 {
  text-align: left;
  padding-top: 10px;
}

.history-section {
  padding-bottom: 30px;
}

.history {
  padding-top: 20px
}

.validating, .validated {
  padding-bottom: 60px
}

.like-button {
text-align: right;
}

.brain-icon {
  height: 40px;
  width: 40px;
  float: right;
}

.brain-icon-left {
  height: 40px;
  width: 40px;
  float: left;
}

.brain-icon-right {
  height: 40px;
  width: 40px;
  float: right;
}

.icon-dash {
  display: flex;
  align-items: center;
  padding-top: 10px;
}

.dash {
  width: 80%
}

.complete-button {
  margin-bottom: 100px;
}

.validation-buttons {
  display: flex;
  gap: 10px;
  justify-content: center;
}

